# muze

./: .gitignore  Makefile  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  tailwind.config.js  vitest.config.ts
.github/workflows/: build-push-deploy.yaml  ci.yml
agents/: ARCHITECTURE.md  ASYNC_INFRASTRUCTURE.md  CONTRIBUTING.md  DATABASE.md  IOS_DEPLOYMENT.md  ISSUES.md  PACKAGE_SETUP.md  PROJECT_LAYOUT.md  PR_WORKFLOW.md  PYTHON_LIBRARY_PATTERNS.md  README.md  SUCCESS_CRITERIA.md  TASK_TEMPLATE.md
alembic/: env.py
alembic/versions/: 817a5270d027_init.py
issues/: cloud-sync-integration.md  dropbox-01-sdk-setup.md  dropbox-02-oauth-pkce.md  dropbox-03-sync-engine.md  dropbox-04-ui-integration.md  icloud-01-entitlements.md  icloud-02-container-access.md  icloud-03-sync-handling.md  icloud-04-ui-integration.md  ios-input-caret-alignment.md  sync-01-status-indicators.md  sync-02-conflict-resolution.md  sync-03-offline-support.md
issues/bugs/mixing/recording/: multi-track-lag.md
src/: App.tsx  config.py  state.py  vectorizer.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: engine.rs  ios_audio.rs  mod.rs  recorder.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/dropbox/: auth.rs  content_hash.rs  mod.rs  sync.rs
src-tauri/src/project/: mod.rs  model.rs
src-tauri/src/vault/: mod.rs  model.rs
src/components/: DropboxFolderPicker.tsx
src/components/editor/: EmptyState.tsx  MixEditor.tsx  TrackSettingsModal.tsx  Waveform.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  Toolbar.tsx
src/components/sidebar/: FileTree.tsx  Sidebar.tsx  VaultSwitcher.tsx  index.ts
src/components/tracks/: Track.tsx  TrackList.tsx  TrackSelector.tsx
src/components/transport/: TransportBar.tsx
src/components/waveform/: WaveformView.tsx
src/constants/: config.ts  theme.ts
src/database/: __init__.py
src/database/models/: __init__.py  thought.py
src/server/: __init__.py  deps.py
src/server/api/v0/: __init__.py
src/server/api/v0/thoughts/: __init__.py  create_thought.py
src/server/pages/: __init__.py  index.py  list.py  new.py
src/server/status/: __init__.py
src/services/: audioEngine.ts  dropboxService.ts  vaultService.ts
src/stores/: dropboxStore.ts  mixStore.ts  projectStore.ts  vaultStore.ts
src/styles/: global.css
src/test/: setup.ts
src/types/: collection.ts  index.ts  mix.ts  navigation.ts  project.ts  vault.ts
src/utils/: time.test.ts  time.ts
static/css/: main.css
styles/: animations.css  main.css
templates/: base.html  header.html  index.html
templates/content/: index.html  list.html  new.html  thought.html
tests/database/: test_thoughts.py
